<resources>
    <string name="USB_DialogTitle">USB Connection</string>
    <string name="app_name">TMC Partner</string>
    <string name="USBPrinterNotConnected">No USB printer found.</string>
    <string name="OTP_Info">We will send you One Time Password </string>
    <string name="Verify_Text">Verify </string>
    <string name="UserInstructionTextOnOTP">Please Enter the 6-Digit Code which sent to your Number </string>
    <string name="Vendor_Login_Text">Login  </string>
    <string name="Select_Vendor">Select Any One Vendor </string>
    <string name="Password_text">Password </string>
    <string name="UserMobileNo_DoesNot_HaveAccess">This Mobile number doesnot have permission to access TMC Partner App </string>
    <string name="Enter_Correct_No">Enter your Correct 10 digit Phone Number </string>
    <string name="OK_Text">OK </string>
    <string name="Cancel_Text">Cancel </string>
    <string name="Yes_Text">Yes </string>
    <string name="No_Text">No </string>
    <string name="Empty_Text"> </string>
    <string name="ReConnect_Instruction"> Printer Disconnected . Please Reconnect the Printer and Click OK !!!  </string>
    <string name="RePrint_Instruction">Do you want to another Copy ? </string>
    <string name="Do_You_Want_to_Connect_Printer_Now">Printer Is Not Connected Yet !! Do You Want to Connect Now ???</string>
    <string name="Bluetooth_turnedOff_Information">Connection Lost!! Turn On Bluetooth </string>
    <string name="Printer_is_Disconnected">Printer is Disconnected Please Goto Settings and Connect it</string>
    <string name="Please_Wait_Until_Printer_Stop">Please Wait Until Printer Stop</string>
    <string name="OrderPlaced_Printer_is_Disconnected">ORDER PLACED !!! But Printer is Disconnected Please Goto Settings and Connect it</string>
    <string name="Printer_is_Disconnected_want_to_generate_TokenNo">Printer is Disconnected . Are u sure you need to Generate Token No withOut Recipt</string>
    <string name="Vendor_logoutInstruction">Are you sure you want to Logout from this Vendor </string>
    <string name="Cant_Refresh_OrderStatus_Instruction">Can`t Refresh !!! Please Refresh Again</string>
    <string name="Weight_cant_be_empty">You Cant Leave weight of the Product Empty</string>
    <string name="Weight_cant_be_Zero">You Cant Leave weight of the Product Zero</string>
    <string name="Quantity_cant_be_empty">You Cant Leave quantity of the Product Empty</string>
    <string name="Quantity_cant_be_Zero">You Cant Leave quantity of the Product Zero</string>
    <string name="CreditedOrdersIrrespectiveofDate">Showing Credit Orders Irrespective of Date</string>
    <string name="Showing_Tickets_That_Not_Closed_Yet">Showing Tickets thats not Closed Yet</string>
    <string name="Grossweight_is_not_changed">Weight is Not Changed for any item ! Do you still need to change Status</string>
    <string name="grossweightChangingInstruction"> Grossweight should be with in the above Range </string>
    <string name="Error_in_updating_GrossWeight">Error in Updating Grossweight . Please try Again !!!!</string>
    <string name="checkGrossweightCheckboxInstruction">Please check is Correct Grossweight Check box for all item</string>
    <string name="CannotbeEdited_When_EditingWeight">Please Finish Editing Weight Of this item first</string>
    <string name="CannotbeEdited_When_EditingQuantity">Please Finish Editing Price Of this item first</string>
    <string name="CannotbeEdited_When_EditingPrice">Please Finish Editing Price Of this item first</string>
    <string name="Price_cant_be_empty">Cant Leave Price of the Product Empty</string>
    <string name="Price_cant_be_Zero">Cant Leave Price of the Product to Zero</string>
    <string name="ShowCreditedOrdersOnly">Show Credit Orders Only </string>
    <string name="PrintFailed_Instruction">Print Failed . Click Ok to Print Again</string>
    <string name="Exit_Instruction">Are you sure do you want to Close TMCPartner App now? </string>
    <string name="ResetToken_Instruction">Click Yes to Reset the Token No for your Store </string>
    <string name="Token_No_Error_Instruction">Cant Generate Token No </string>
    <string name="OrderCancellingInstruction">Are You Sure ! You Want to Cancel this Order  </string>
    <string name="Token_No_Not_Found_Instruction">Cant Find Token No </string>
    <string name="WeightMachine_Not_Found_Instruction">Please Connect Weight Machine , And Click Ok !!!!!</string>
    <string name="Pos_Printer_Not_Connected">POS Printer is Not Connected</string>
    <string name="Please_select_printer_type">Please Select the Printer type in Settings </string>
    <string name="Token_No_Not_Updated_Instruction">Cant Update Token No </string>
    <string name="TurnOnMenuInstruction">   Turn ON this Menu  </string>
    <string name="TurnOffMenuInstruction">  Turn OFF this Menu  </string>
    <string name="TurnOffAllowNegativeStock">  Dont allow stock balance below zero  </string>
    <string name="TurnOnAllowNegativeStock">  Allow stock balance below zero  </string>
    <string name="TurnOnAllMenuSubCtgywiseInstruction">   Turn ON All Menu with this SubCtgy </string>
    <string name="TurnOffAllMenuSubCtgywiseInstruction">  Turn OFF All Menu with this SubCtgy </string>
    <string name="Enter_Correct_Password">Enter Correct Password </string>
    <string name="Enter_Correct_OTP">Enter Correct Otp </string>
    <string name="Enter_Password">Password Field Cannot be Empty </string>
    <string name="Manage_Orders_Text">Manage Orders </string>
    <string name="Manage_Menu_Text">Manage Menu &amp; Slots</string>
    <string name="New_order_text">Place New Order</string>
    <string name="Settings_text">Settings </string>
    <string name="Select_an_address">Please Select Address to Place Order</string>
    <string name="DeliveryDistance_is_empty">Deliver Distance is Empty </string>
    <string name="Pincode_is_empty">Pincode is Empty </string>
    <string name="addressLine1_is_empty">Address Line 1 is Empty.</string>
    <string name="addressLine2_is_empty">Address Line 2 is Empty. </string>
    <string name="AddressType_is_empty">Address Type is Empty </string>
    <string name="Cart_is_empty">Cart is Empty So Add the Items</string>
    <string name="Orders_weight_Cant_be_leave_unedited">Please Add Weight and click next button to all the Orders</string>
    <string name="netweight_Cant_be_Zero">Please Add NetWeight and click Update Changes button </string>
    <string name="Cant_place_Refundorder">Cannot Place Order while Bill amount is greater than balance amount </string>
    <string name="Enter_Reason_For_Replacement">Enter Reason For Replacement</string>
    <string name="Cant_place_order">Cannot Place Order while Bill amount is 0</string>
    <string name="TodaysOrderText">Todays Order </string>
    <string name="TomorrowsOrderText">Tomorrows Order</string>
    <string name="Enter_the_customerName_text">Enter the Customer Name</string>
    <string name="Enter_the_mobile_no_text">Enter the Valid Mobile Number</string>
    <string name="SelectPaymentMode">Select Payment Mode to Place Order</string>
    <string name="PointusercanRedeemtoday">You Cant redeem more than  : </string>
    <string name="Name_Of_the_Vendor_text">TMC Hasthinapuram , Chromepet</string>
    <string name="No_Orders_Instruction_text">No Orders Available. </string>
    <string name="No_New_Users_Instruction_text">No New User Account Created on this Date. </string>
    <string name="New_button_text">New</string>
    <string name="Confirmed_button_text">Confirmed</string>
    <string name="Ready_For_Pickup_text">Ready for Pickup </string>
    <string name="Deliverd_button_text">Delivered </string>
    <string name="Transit_button_text">Transit </string>
    <string name="DeliveryType">Delivery Type </string>
    <string name="OrderId_text">Order Id : </string>
    <string name="Slot_Name">Slot Name : </string>
    <string name="showscreenshot">Show Payment Transaction screenshot</string>
    <string name="Generate_Token_No_text">Generate Token no </string>
    <string name="Regenerate_Token_No_text">Regenerate Token no </string>
    <string name="Token_No_text">Token no : </string>
    <string name="Mobile_text">Mobile : </string>
    <string name="Print_text">Print </string>
    <string name="Confirm_Order_text">Confirm Order </string>
    <string name="cancel_Order_text">Cancel Order </string>
    <string name="cancelled_Order_text">Cancelled Orders List </string>
    <string name="Order_Details">Order Details</string>
    <string name="Status">Status :   </string>
    <string name="Time">Time </string>
    <string name="Paid_amount">Paid Amount </string>
    <string name="Change_Status">Change Status </string>
    <string name="Loading_Order_Status">Loading Status </string>
    <string name="Loading_OrderId">Loading Order Id</string>
    <string name="Loading_MobileNo">Loading Mobile No</string>
    <string name="Loading_TokenNo">Loading Token No</string>
    <string name="Loading_Time">Loading Time </string>
    <string name="Loading_Order_Details">Loading Order Details </string>
    <string name="Loading_paid_Amount">Loading Paid Amount </string>
    <string name="NameOfDeliveryPartner">Name of the Delivery Person : </string>
    <string name="AssignPartner">Assign Delivery Person</string>
    <string name="DeliveryPartnersMobileNo">Delivery Person Mobile No : </string>
    <string name="DeliveryPartnersName">Delivery Person Name : </string>
    <string name="ChangeDeliveryPartner">Change Delivery Person   </string>
    <string name="ExpressDelivery_Text">Express Delivery </string>
    <string name="Preorder_Text">Preorder </string>
    <string name="APPExpressDelivery_Text">App Orders - Express Delivery </string>
    <string name="APPPreorder_Text">App Orders - Preorder </string>
    <string name="PhoneOrders">Phone Orders  </string>
    <string name="Menu_Item_category">Menu Item Category</string>
    <string name="Choose_a_Category">Choose a Category</string>
    <string name="Bill_Details">Bill Details </string>
    <string name="Item_Total">Item Total </string>
    <string name="Coupon_discount"> Discount </string>
    <string name="Delivery_Charges"> Delivery Charges </string>
    <string name="Taxes_and_charges">GST </string>
    <string name="To_Pay">To Pay </string>
    <string name="Check_out"> Check Out </string>
    <string name="RedeemPoints"> Redeem Points </string>
    <string name="Discount_percentage"> Add Discount  </string>
    <string-array name="OrderType">
        <item>POSORDER</item>

        <item>PHONEORDER</item>
    </string-array>
    <string-array name="B2BOrderType">
        <item>POSORDER</item>


    </string-array>
    <string-array name="PaymentMode">
        <item>None Selected</item>

        <item>CREDIT</item>

        <item>CARD</item>
        <item>CASH</item>
        <item>UPI</item>

    </string-array>
    <string-array name="RatingEnquiryStatus">
        <item>Customer not picked the call </item>

        <item>Customer convinced ,ticket closed </item>

        <item>Customer cannot be convinced </item>


    </string-array>
    <string name="CustomerName"> Name </string>
    <string name="Customer_PhoneNumber">  Mobile No  </string>
    <string name="Order_details">Order Details </string>
    <string name="Auto_Refreshing">Turn On Auto Refreshing </string>
    <string name="Delivery_Slot_Transaction"> Delivery Slot List For Transaction</string>
    <string name="Delivery_Slot_TransactionDetails"> Delivery Slot Transaction Details</string>
    <string name="Change_Delivery_Slot_Details">Change Delivery Slot Availability Status</string>
    <string name="ExpressDelivery_slotDetails_Text">Express Delivery Slot Status </string>
    <string name="Todays_Preorder_slotDetails_Text">Todays Preorder Slot Status</string>
    <string name="Tomorrows_Preorder_slotDetails_Text">Tomorrows Preorder Slot Status</string>
</resources>