<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MobileScreen_JavaClasses.OtherClasses.Mobile_Vendor_Selection_Screen"
    android:background="@mipmap/portrait_poster"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/TMC_White"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="center_vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/TMC_Primary_Text_Color"
            android:gravity="center"
            android:textSize="30sp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/Vendor_Login_Text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/TMC_Orange"
            android:text="@string/Select_Vendor" />

        <Spinner
            android:id="@+id/pos_vendor_selection_widget"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:textSize="18sp"
            android:fontFamily="@font/open_sans"
            android:layout_marginEnd="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/TMC_Orange"
            android:text="@string/Password_text" />

        <EditText
            android:id="@+id/pos_vendor_password_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:fontFamily="@font/open_sans"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/pos_vendor_verify_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="25sp"
            android:fontFamily="@font/open_sans_semibold"
            android:background="@drawable/button_background"
            android:textColor="@color/TMC_White"
            android:text="@string/Verify_Text" />
    </LinearLayout>
<LinearLayout
        android:id="@+id/loadingpanelmask_dailyItemWisereport"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/TMC_Hint_Color"
        android:alpha="0.85"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/loadingPanel_dailyItemWisereport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loadinganim_layout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="visible"
            android:layout_gravity="center"
            app:indicatorColor="@color/TMC_Orange"
            app:indicatorName="BallPulseIndicator" />
    </LinearLayout>

    </RelativeLayout>
</FrameLayout>