<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/order_item_list_parentLayout"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="160dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tokenNo_label_widget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/Token_No_text" />

                    <TextView
                        android:id="@+id/tokenNo_text_widget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans"
                        android:text="" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mobileNo_label_widget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"

                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/Mobile_text" />

                    <TextView
                        android:id="@+id/moblieNo_text_widget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans"
                        android:text="" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"

                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/orderDetails_text_widget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="TextView" />
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:id="@+id/new_Order_Linearlayout"
                    >


                    <Button
                        android:id="@+id/accept_Order_button_widget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/orange_non_selected_button_background"
                        android:fontFamily="@font/open_sans_bold"
                        android:textAllCaps="false"
                        android:text="@string/Confirm_Order_text"
                        />
                    <Button
                        android:id="@+id/cancel_button_widget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/open_sans_bold"
                        android:textAllCaps="false"

                        android:background="@drawable/orange_non_selected_button_background"
                        android:text="@string/cancel_Order_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:id="@+id/confirming_order_Linearlayout"
                    >


                    <Button
                        android:id="@+id/ready_for_pickup_button_widget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/orange_non_selected_button_background"
                        android:fontFamily="@font/open_sans_bold"
                        android:textAllCaps="false"

                        android:text="@string/Ready_For_Pickup_text" />

                    <Button
                        android:id="@+id/pending_order_print_button_widget"
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/orange_non_selected_button_background"
                        android:fontFamily="@font/open_sans_bold"
                        android:textAllCaps="false"
                        android:layout_height="wrap_content"
                        android:text="@string/Print_text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:id="@+id/ready_Order_Linearlayout"
                    >

                    <Button
                        android:id="@+id/other_print_button_widget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/open_sans_bold"
                        android:textAllCaps="false"

                        android:background="@drawable/orange_non_selected_button_background"
                        android:text="@string/Print_text" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:id="@+id/cancelled_Order_Linearlayout"
                    >

                    <Button
                        android:id="@+id/cancelled_button_widget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/orange_non_selected_button_background"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/cancelled_Order_text"
                        android:textAllCaps="false" />


                    <Button
                        android:id="@+id/cancelled_print_button_widget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        android:background="@drawable/orange_non_selected_button_background"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="center"
                        android:text="@string/Print_text"
                        android:textAllCaps="false" />


                </LinearLayout>


            </RelativeLayout>
        </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>

