<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context=".Settings.ChangeDelivery_Slot_Availability_Status">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="@color/TMC_White"
        android:textSize="17sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/open_sans_bold"
        android:background="@color/TMC_Orange"
        android:text="@string/Change_Delivery_Slot_Details" />



    <RelativeLayout
    android:layout_width="match_parent"

    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans_semibold"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/ExpressDelivery_slotDetails_Text"

            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/border_line" />

        <Switch
            android:id="@+id/vendorSlotAvailabiltySwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_semibold"
            android:text="EXPRESS DELIVERY"
            android:textSize="16sp"
            app:thumbTint="@drawable/switch_thumb_selector"
            app:trackTint="@drawable/switch_track_selector"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_line" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans_semibold"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/Todays_Preorder_slotDetails_Text"

            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/border_line" />

        <ListView
            android:layout_width="match_parent"
            android:id="@+id/todaysDeliverySlotList"
            android:layout_height="match_parent" />
    </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/Tomorrows_Preorder_slotDetails_Text"

                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@drawable/border_line" />

                <ListView
                    android:layout_width="match_parent"
                    android:id="@+id/tomorrowsDeliverySlotList"

                    android:layout_height="match_parent" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/loadingpanelmask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/TMC_ProgressBar_Color"
        android:alpha="0.85"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loadinganim_layout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="visible"
            android:layout_gravity="center"
            app:indicatorColor="@color/TMC_Orange"
            app:indicatorName="BallPulseIndicator" />

    </LinearLayout>
</RelativeLayout>
</LinearLayout>